// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boolean > crossSerialize > supports boolean 1`] = `"!0"`;

exports[`boolean > crossSerialize > supports boolean 2`] = `"!1"`;

exports[`boolean > crossSerializeAsync > supports boolean 1`] = `"$R[0]=$R[0]=Promise.resolve(!0)"`;

exports[`boolean > crossSerializeAsync > supports boolean 2`] = `"$R[0]=$R[0]=Promise.resolve(!1)"`;

exports[`boolean > crossSerializeStream > supports false value 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`boolean > crossSerializeStream > supports false value 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],!1)"
`;

exports[`boolean > crossSerializeStream > supports true value 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`boolean > crossSerializeStream > supports true value 2`] = `
"($R[3]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],!0)"
`;

exports[`boolean > toCrossJSON > supports boolean 1`] = `"{"t":2,"s":2}"`;

exports[`boolean > toCrossJSON > supports boolean 2`] = `"{"t":2,"s":3}"`;

exports[`boolean > toCrossJSONAsync > supports boolean 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":2}}"`;

exports[`boolean > toCrossJSONAsync > supports boolean 2`] = `"{"t":12,"i":0,"s":1,"f":{"t":2,"s":3}}"`;

exports[`boolean > toCrossJSONStream > supports false value 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`boolean > toCrossJSONStream > supports false value 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":3}]}"`;

exports[`boolean > toCrossJSONStream > supports true value 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`boolean > toCrossJSONStream > supports true value 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":3,"s":2},{"t":2,"s":2}]}"`;

exports[`boolean > toJSON > supports boolean 1`] = `"{"t":{"t":2,"s":2},"f":31,"m":[]}"`;

exports[`boolean > toJSON > supports boolean 2`] = `"{"t":{"t":2,"s":3},"f":31,"m":[]}"`;

exports[`boolean > toJSONAsync > supports boolean 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":2}},"f":31,"m":[]}"`;

exports[`boolean > toJSONAsync > supports boolean 2`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":2,"s":3}},"f":31,"m":[]}"`;
